// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Salaires /> should add a salaire 1`] = `
<div>
  <legend
    class="sc-hsWlPz dQgJqc"
    data-testid="question-label"
  >
    <span
      class="sc-fcCDlF gZwBNq"
    >
      Quels sont les salaires mensuels bruts perçus durant le contrat de travail ?
      <span
        class="sc-fcCDlF gePGde"
      >
         (obligatoire)
      </span>
    </span>
  </legend>
  <div
    class="sc-knEsKG gPmAfU"
  >
    <label
      class="sc-grxQYx feXdnD"
      for="5"
    >
      Montant :
    </label>
    <div
      class="sc-iJbNxu dbzYfl"
    >
      <span
        class="sc-bQmOxr iqEHsz"
      >
        <input
          class="sc-fWQKxP iOpVQL"
          id="5"
          name="salaires[0].salaire"
          type="number"
          value=""
        />
        <div
          class="sc-EJAja kKkiFD"
        >
          <svg
            aria-hidden="true"
            fill="none"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.632 12.392c-.78 0-1.42.232-1.917.697-.493.465-.822 1.168-.988 2.108h3.785v1.279h-3.91l-.016.373v.457l.016.323h3.387v1.27h-3.245c.354 1.727 1.361 2.59 3.021 2.59.791 0 1.602-.171 2.432-.514v1.685c-.725.337-1.569.506-2.531.506-1.334 0-2.419-.365-3.254-1.096-.83-.73-1.373-1.787-1.627-3.17h-1.262v-1.27h1.129l-.017-.308v-.307l.017-.54h-1.13v-1.278h1.246c.21-1.389.739-2.479 1.585-3.27.847-.792 1.94-1.187 3.28-1.187 1.106 0 2.097.243 2.971.73l-.697 1.553c-.852-.421-1.61-.631-2.275-.631z"
              fill="currentColor"
            />
          </svg>
        </div>
      </span>
    </div>
    <button
      class="sc-hhOBVt cizsts sc-ZqGJI iGodws"
      type="button"
    >
      Supprimer
      <svg
        aria-hidden="true"
        class="sc-dvEHMn fEcSSS"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.752 16.5 7.258 8.591A.957.957 0 0 1 7 7.932c0-.247.093-.484.259-.659A.858.858 0 0 1 7.883 7a.86.86 0 0 1 .625.273L16 15.183l7.492-7.91A.859.859 0 0 1 24.117 7c.234 0 .459.098.624.273a.957.957 0 0 1 .259.659.957.957 0 0 1-.259.66L17.249 16.5l7.492 7.909a.958.958 0 0 1 .259.659.957.957 0 0 1-.259.659.859.859 0 0 1-.624.273.86.86 0 0 1-.625-.273L16 17.817l-7.492 7.91a.859.859 0 0 1-.625.273.859.859 0 0 1-.624-.273.957.957 0 0 1-.259-.659.96.96 0 0 1 .259-.66l7.492-7.908z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <button
    class="sc-hhOBVt cizsts sc-kSGOQU byxAuQ"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-jsTgWu dcCoNh"
      fill="none"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8 2a1 1 0 0 0-1 1v4H3a1 1 0 0 0 0 2h4v4a1 1 0 1 0 2 0V9h4a1 1 0 1 0 0-2H9V3a1 1 0 0 0-1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    Ajouter un salaire
  </button>
</div>
`;

exports[`<Salaires /> should delete a salaires 1`] = `
<div>
  <legend
    class="sc-hsWlPz dQgJqc"
    data-testid="question-label"
  >
    <span
      class="sc-fcCDlF gZwBNq"
    >
      Quels sont les salaires mensuels bruts perçus durant le contrat de travail ?
      <span
        class="sc-fcCDlF gePGde"
      >
         (obligatoire)
      </span>
    </span>
  </legend>
  <button
    class="sc-hhOBVt cizsts sc-kSGOQU byxAuQ"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-jsTgWu dcCoNh"
      fill="none"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8 2a1 1 0 0 0-1 1v4H3a1 1 0 0 0 0 2h4v4a1 1 0 1 0 2 0V9h4a1 1 0 1 0 0-2H9V3a1 1 0 0 0-1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    Ajouter un salaire
  </button>
</div>
`;

exports[`<Salaires /> should render 1`] = `
<div>
  <legend
    class="sc-hsWlPz dQgJqc"
    data-testid="question-label"
  >
    <span
      class="sc-fcCDlF gZwBNq"
    >
      Quels sont les salaires mensuels bruts perçus durant le contrat de travail ?
      <span
        class="sc-fcCDlF gePGde"
      >
         (obligatoire)
      </span>
    </span>
  </legend>
  <div
    class="sc-knEsKG gPmAfU"
  >
    <label
      class="sc-grxQYx feXdnD"
      for="1"
    >
      Montant :
    </label>
    <div
      class="sc-iJbNxu dbzYfl"
    >
      <span
        class="sc-bQmOxr iqEHsz"
      >
        <input
          class="sc-fWQKxP iOpVQL"
          id="1"
          name="salaires[0].salaire"
          type="number"
          value="3000"
        />
        <div
          class="sc-EJAja kKkiFD"
        >
          <svg
            aria-hidden="true"
            fill="none"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.632 12.392c-.78 0-1.42.232-1.917.697-.493.465-.822 1.168-.988 2.108h3.785v1.279h-3.91l-.016.373v.457l.016.323h3.387v1.27h-3.245c.354 1.727 1.361 2.59 3.021 2.59.791 0 1.602-.171 2.432-.514v1.685c-.725.337-1.569.506-2.531.506-1.334 0-2.419-.365-3.254-1.096-.83-.73-1.373-1.787-1.627-3.17h-1.262v-1.27h1.129l-.017-.308v-.307l.017-.54h-1.13v-1.278h1.246c.21-1.389.739-2.479 1.585-3.27.847-.792 1.94-1.187 3.28-1.187 1.106 0 2.097.243 2.971.73l-.697 1.553c-.852-.421-1.61-.631-2.275-.631z"
              fill="currentColor"
            />
          </svg>
        </div>
      </span>
    </div>
    <button
      class="sc-hhOBVt cizsts sc-ZqGJI iGodws"
      type="button"
    >
      Supprimer
      <svg
        aria-hidden="true"
        class="sc-dvEHMn fEcSSS"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.752 16.5 7.258 8.591A.957.957 0 0 1 7 7.932c0-.247.093-.484.259-.659A.858.858 0 0 1 7.883 7a.86.86 0 0 1 .625.273L16 15.183l7.492-7.91A.859.859 0 0 1 24.117 7c.234 0 .459.098.624.273a.957.957 0 0 1 .259.659.957.957 0 0 1-.259.66L17.249 16.5l7.492 7.909a.958.958 0 0 1 .259.659.957.957 0 0 1-.259.659.859.859 0 0 1-.624.273.86.86 0 0 1-.625-.273L16 17.817l-7.492 7.91a.859.859 0 0 1-.625.273.859.859 0 0 1-.624-.273.957.957 0 0 1-.259-.659.96.96 0 0 1 .259-.66l7.492-7.908z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <button
    class="sc-hhOBVt cizsts sc-kSGOQU byxAuQ"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-jsTgWu dcCoNh"
      fill="none"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8 2a1 1 0 0 0-1 1v4H3a1 1 0 0 0 0 2h4v4a1 1 0 1 0 2 0V9h4a1 1 0 1 0 0-2H9V3a1 1 0 0 0-1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    Ajouter un salaire
  </button>
</div>
`;
